--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="twelve columns"">
+      <div class="twelve columns bumpup">
         <p id="ballssofar">&nbsp;</p>
       </div>
     </div>
@@ -46,8 +46,9 @@
       <div class="twelve columns"">
         <div id="welcome">
           <h1>PTA Bingo</h1>
-          <p>Welcome! Click below to start a new round, then press any key to draw a new number.</p>
-          <p>Reload the browser tab to reset the game and start a new round.</p>
+          <p>Welcome! Click below to start a new round.</p>
+          <p>To call a new ball, either click the button on screen or press the B key.</p>
+          <p>You can press the R key at any time to reset everything and start a new round.</p>
           <p>If you found this useful, please <a href="https://cooperslanepta.co.uk/donate5/" target="_blank">donate a few quid</a> - thanks!</p>
         </div>
         <div id="startgame"><p class="button">Start Round</p></div>
